# Adding_Datasets_to_KG

./: .gitignore  LICENSE  README.md  pyproject.toml
ETL/CIViC/: extract_civic_data.py
app/: README.md  app.py  requirements.txt  run.sh
data/: goldenkg_v1_stats.csv
data/1kg/: 1kg_test.json  1kg_test2.json  prepare_1000genomes.sh
data/CIViC/: variant_gene_disease_therapy_with_normIDs.tsv
docs/: 01_DATA_PREPROCESSING_GUIDE.md  02_INFRASTRUCTURE_GUIDE.md  03_DATA_LOADING_GUIDE.md  03_DATA_LOADING_GUIDE_GOLDENKG_V2.md  INFRASTRUCTURE_SETUP_GUIDE.md  MIDAS_KNOWLEDGE_GRAPH_SUMMARY.md
notebooks/: 03_midas-dev-2510021802_agent.ipynb  03_midas-dev-2510031321_agent.ipynb  03_midas_agent.ipynb  03_strand_agent.ipynb
scripts/agent/: simple_neptune_agent.py
scripts/cbioportal/: README.md  config.json
scripts/cbioportal/1_download/: 1_fetch_mutations.sh  2_cancer_types.sh
scripts/cbioportal/mapping/: mapping.json  (+1 more)
scripts/database/: check_neptune_access.sh  deploy_stack.sh  manage_neptune.sh  neptune-stack.yaml  neptune_config.env
scripts/loading/: load_full_dataset_bulk.sh  load_golden_kg.sh  load_golden_kg_v2.sh  reset_neptune_db.sh
scripts/preprocessing/: convert_for_neptune_bulk.py  extract_civic_data.py  fix_golden_kg_format.py  fix_golden_kg_v2_format.py  map_therapy_id_revised.py
scripts/testing/: test_neptune_connection.py
src/adding_datasets_to_kg/: convert_data.py  kgx_converter.py  kgx_example.py  merge.py  metadata.py  normalize.py  pipeline.py  util.py
src/midas/: convert_data.py  kgx_example.py  merge.py  normalize.py  pipeline.py  util.py
(+1 files in other folders)
